# DeskOrganizer

./: README.md  pyproject.toml
src/DeskOrganizer/: __init__
