[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DeskOrganizer"
version = "0.0.1"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

authors = [
  { name="kappa ", email="kappann01@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kylejacobCS/DeskOrganizer"
Issues = "https://github.com/kylejacobCS/DeskOrganizer/issues"